--- a/index.html
+++ b/index.html
@@ -31,9 +31,36 @@
     </ul>
     <button class="btn draw-border">Follow</button>
     <button class="btn draw-border">Message</button>
-
   </div>
-  
+
+
+  <!-- INÍCIO LEONARDO MARTELOTTE -->
+  <div class="card">
+    <img src="https://avatars.githubusercontent.com/u/32073964?v=4" alt="Person" class="card__image">
+    <p class="card__name">Leonardo Martelotte</p>
+    <div class="grid-container">
+
+      <div class="grid-child-posts">
+        0 Post
+      </div>
+
+      <div class="grid-child-followers">
+        0 Likes
+      </div>
+
+    </div>
+    <ul class="social-icons">
+      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    </ul>
+    <button class="btn draw-border">Follow</button>
+    <button class="btn draw-border">Message</button>
+  </div>
+  <!-- FIM LEONARDO MARTELOTTE -->
+
+
 </div>
 <!-- partial -->
   
