Pagina Martelotte - ajuste

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div class="grid-container">
 
       <div class="grid-child-posts">
-        0 Post
+        Período: 8º
       </div>
 
       <div class="grid-child-followers">
-        0 Likes
+        Aluno
       </div>
 
     </div>
