Adicionados links de redes sociais
Adicionados links de redes sociais

--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
 
     </div>
     <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+      <li><a href="https://github.com/leonardomartelotte"><i class="fa fa-github"></i></a></li>
+      <li><a href="https://br.linkedin.com/in/leonardo-martelotte"><i class="fa fa-linkedin"></i></a></li>
     </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
+    <a href="https://leonardomartelotte.github.io/martelotte-com/" class="btn draw-border" style="text-align: center; text-decoration: none; max-width: 130px">Follow</a>
+    <a href="https://leonardomartelotte.github.io/martelotte-com/contact.html" class="btn draw-border" style="text-align: center; text-decoration: none; max-width: 130px">Message</a>
   </div>
   <!-- FIM LEONARDO MARTELOTTE -->
 
