--- a/index.html
+++ b/index.html
@@ -40,21 +40,20 @@
     <div class="grid-container">
 
       <div class="grid-child-posts">
-        8º periodo
+        Unilasalle-RJ
       </div>
 
       <div class="grid-child-followers">
-        Aluno - SI
+        8º período - SI
       </div>
 
     </div>
-    <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    <ul class="social-icons">      
+      <li><a href="https://www.linkedin.com/in/guilherme-alexandre-a66027161/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="mailto:guilherme.sousa@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
+      <li><a href="https://github.com/GuilhermeAs7" target="_blank"><i class="fa fa-github"></i></a></li>
     </ul>
-    <button class="btn draw-border">Follow</button>
+    <button onclick="window.location.href='https://github.com/GuilhermeAs7';" class="btn draw-border">Follow</button>
     <button class="btn draw-border">Message</button>
   </div>
   <!-- FIM GUILHERME ALEXANDRE -->
