--- a/index.html
+++ b/index.html
@@ -10,27 +10,25 @@
 <!-- partial:index.partial.html -->
 <div class="container">
   <div class="card">
-    <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
-    <p class="card__name">Lily-Grace Colley</p>
+    <img src="https://avatars.githubusercontent.com/u/31681839?v=4" alt="Person" class="card__image">
+    <p class="card__name">Guilherme Mendes</p>
     <div class="grid-container">
 
       <div class="grid-child-posts">
-        156 Post
+        Unilasalle RJ
       </div>
 
       <div class="grid-child-followers">
-        1012 Likes
+        8º Período - SI
       </div>
 
     </div>
     <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+      <li><a href="https://br.linkedin.com/in/guilherme-mendes"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/mendesguii"><i class="fa fa-github"></i></a></li>
+	  <li><a href="mailto:guilherme.mendes@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
     </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
+    <button onclick="window.location.href='https://mendesguii.github.io/startbootstrap-landing-page/';"class="btn draw-border">Follow</button>
 
   </div>
   
