--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
     <button class="btn draw-border">Message</button>
 
   </div>
+<!-- inicio alex -->
+  <div class="card">
+    <img src="img/cara_do_joao.jpg" alt="Person" class="card__image">
+    <p class="card__name">João Gabriel A Napoleão</p>
+    <div class="grid-container">
+
+      <div class="grid-child-posts">
+        666 Posts
+      </div>
+
+      <div class="grid-child-followers">
+        1138 Curtidas
+      </div>
+
+    </div>
+    <ul class="social-icons">
+      <li><a href="https://github.com/Voidgodhand"><i class="fa fa-github"></i></a></li>
+    </ul>
+    <a href="https://voidgodhand.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Follow</button></a>
+
+  </div>
+<!-- fim alex -->
   
 </div>
 <!-- partial -->
