--- a/index.html
+++ b/index.html
@@ -1,41 +1,72 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Profile cards - CSS grid</title>
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<div class="container">
-  <div class="card">
-    <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
-    <p class="card__name">Lily-Grace Colley</p>
-    <div class="grid-container">
+  <!-- partial:index.partial.html -->
+  <div class="container">
+    <div class="card">
+      <img
+        src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no"
+        alt="Person" class="card__image">
+      <p class="card__name">Lily-Grace Colley</p>
+      <div class="grid-container">
 
-      <div class="grid-child-posts">
-        156 Post
-      </div>
+        <div class="grid-child-posts">
+          156 Post
+        </div>
 
-      <div class="grid-child-followers">
-        1012 Likes
+        <div class="grid-child-followers">
+          1012 Likes
+        </div>
+
       </div>
+      <ul class="social-icons">
+        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+      </ul>
+      <button class="btn draw-border">Follow</button>
+      <button class="btn draw-border">Message</button>
 
     </div>
-    <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-    </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
+    
+    <div class="card">
+      <img
+        src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no"
+        alt="Person" class="card__image">
+      <p class="card__name">Gustavo Duarte</p>
+      <div class="grid-container">
+
+        <div class="grid-child-posts">
+          156 Post
+        </div>
+
+        <div class="grid-child-followers">
+          1012 Likes
+        </div>
+
+      </div>
+      <ul class="social-icons">
+        <li><a href="https://www.instagram.com/gustavogdm/"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://twitter.com/gustDuz"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/gustavo-duarte-61593990/"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/GustavoDuarteM"><i class="fa fa-github"></i></a></li>
+      </ul>
+      <button class="btn draw-border">Follow</button>
+      <button class="btn draw-border">Message</button>
+
+    </div>
 
   </div>
-  
-</div>
-<!-- partial -->
-  
 </body>
+
 </html>
