--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
     <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
     <p class="card__name">Lily-Grace Colley</p>
     <div class="grid-container">
-
       <div class="grid-child-posts">
         156 Post
       </div>
-
       <div class="grid-child-followers">
         1012 Likes
       </div>
-
     </div>
     <ul class="social-icons">
       <li><a href="#"><i class="fa fa-instagram"></i></a></li>
@@ -31,25 +28,21 @@
     </ul>
     <button class="btn draw-border">Follow</button>
     <button class="btn draw-border">Message</button>
-
   </div>
-  <!-- partial -->
+</div>
+<!-- partial -->
 
 <!-- partial:index.partial.html -->
-
 <div class="card">
   <img src="Adriano.png">
   <p class="card__name">Adriano Fernandes</p>
   <div class="grid-container">
-
     <div class="grid-child-posts">
       120 Post
     </div>
-
     <div class="grid-child-followers">
       1600 Likes
     </div>
-
   </div>
   <ul class="social-icons">
     <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
@@ -57,16 +50,34 @@
     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
     <li><a href="#"><i class="fa fa-codepen"></i></a></li>
   </ul>
-
-
   <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
   <button class="btn draw-border">Message</button>
-
 </div>
-
-
 <!-- partial -->
+
+  
+<!-- partial:index.partial.html -->
+<div class="card">
+  <img src="https://avatars.githubusercontent.com/u/26581648?v=4">
+  <p class="card__name">Gabriel Rocha</p>
+  <div class="grid-container">
+    <div class="grid-child-posts">
+      1 Post
+    </div>
+    <div class="grid-child-followers">
+      1 Likes
+    </div>
+  </div>
+  <ul class="social-icons">
+    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/gabriel-rocha-a575a458/"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+  </ul>
+  <a href="https://qpgabriel.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
+  <button class="btn draw-border">Message</button>
 </div>
+<!-- partial -->
 
   
 </body>
