--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
 <!-- partial:index.partial.html -->
 
 <div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
+  <img src="paulinho.jpeg">
+  <p class="card__name">Paulo Sérgio Marinho</p>
   <div class="grid-container">
 
     <div class="grid-child-posts">
-      120 Post
+      356 Post
     </div>
 
     <div class="grid-child-followers">
-      1600 Likes
+      1000000 Likes
     </div>
 
   </div>
   <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="https://www.instagram.com/paulinho_01p/"><i class="fa fa-instagram"></i></a></li>
     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
     <li><a href="#"><i class="fa fa-codepen"></i></a></li>
   </ul>
 
 
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
+  <a href="https://paulinho010.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
   <button class="btn draw-border">Message</button>
 
 </div>
