criação de uma pasta para as imagens do projeto

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div> 
   <div class="container" style="margin-left: 500px;">
     <div class="card">
-      <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
+      <img src="img/end.JPG" class="card__image">
       <p class="card__name">Endrigo Valente</p>
       <div class="grid-container">
   
