--- a/index.html
+++ b/index.html
@@ -35,34 +35,35 @@
   </div>
   <!-- partial -->
 
-<!-- partial:index.partial.html -->
+<!-- INÍCIO Rafael Feres -->
 
 <div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
+  <img src="https://avatars.githubusercontent.com/u/28442556?s=400&u=ff4225ddae174ef6d2e0786d97ab56e7d639b51b&v=4" alt="Person" class="card__image">
+  <p class="card__name">Rafael Feres</p>
   <div class="grid-container">
 
     <div class="grid-child-posts">
-      120 Post
+      Semester: 8th
     </div>
 
     <div class="grid-child-followers">
-      1600 Likes
+      Student/Researcher 
     </div>
 
   </div>
   <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/feresrafael/"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="https://github.com/feresrafael"><i class="fa fa-github"></i></a></li>
   </ul>
 
 
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
+  <a href="https://feresrafael.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
   <button class="btn draw-border">Message</button>
 
 </div>
+<!-- FIM Rafael Feres -->
 
 
 <!-- partial -->
