pagina inicial de perfil

--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
 <!-- partial:index.partial.html -->
 
 <div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.scoopnest.com%2Fs%2Fdahyun&psig=AOvVaw0GJgKAyz7w8JYctDLiDpzm&ust=1619716429349000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjhloe4ofACFQAAAAAdAAAAABAW">
+  <p class="card__name">Luiz Fernando</p>
   <div class="grid-container">
 
     <div class="grid-child-posts">
-      120 Post
+      Período: 6
     </div>
 
     <div class="grid-child-followers">
-      1600 Likes
+      Aluno
     </div>
 
   </div>
   <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="https://www.instagram.com/fernando_quinellato/"><i class="fa fa-instagram"></i></a></li>
     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
     <li><a href="#"><i class="fa fa-codepen"></i></a></li>
   </ul>
 
 
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
+  <a href="https://github.com/fernandoquinellato"><button class="btn draw-border">Página</button></a>
   <button class="btn draw-border">Message</button>
 
 </div>
@@ -71,3 +71,4 @@
   
 </body>
 </html>
+
