--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- partial:index.partial.html -->
 
 <div class="card">
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.scoopnest.com%2Fs%2Fdahyun&psig=AOvVaw0GJgKAyz7w8JYctDLiDpzm&ust=1619716429349000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjhloe4ofACFQAAAAAdAAAAABAW">
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.scoopnest.com%2Fs%2Fdahyun&psig=AOvVaw0GJgKAyz7w8JYctDLiDpzm&ust=1619716429349000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjhloe4ofACFQAAAAAdAAAAABAW" alt="Person" class="card__image">
   <p class="card__name">Luiz Fernando</p>
   <div class="grid-container">
 
