--- a/index.html
+++ b/index.html
@@ -37,33 +37,34 @@
 
 <!-- partial:index.partial.html -->
 
+ <!-- Inicio Renan -->
 <div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
+  <img src="renan.png" alt="Person" class="card__image">
+  <p class="card__name">Renan Tostes</p>
   <div class="grid-container">
 
     <div class="grid-child-posts">
-      120 Post
+      Período: 7º
     </div>
 
     <div class="grid-child-followers">
-      1600 Likes
+      Aluno
     </div>
 
   </div>
   <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="https://www.instagram.com/renanlt/"><i class="fa fa-instagram"></i></a></li>
     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
     <li><a href="#"><i class="fa fa-codepen"></i></a></li>
   </ul>
 
 
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
+  <a href="https://renanltostes.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
   <button class="btn draw-border">Message</button>
 
 </div>
-
+<!-- Fim Renan -->
 
 <!-- partial -->
 </div>
