--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Profile cards - CSS grid</title>
@@ -10,64 +10,24 @@
 <!-- partial:index.partial.html -->
 <div class="container">
   <div class="card">
-    <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
-    <p class="card__name">Lily-Grace Colley</p>
+    <img src="https://avatars.githubusercontent.com/u/32078880?s=400&u=ff2dc420ce8d9660cb6d8c5d4a01471698dfd2c4&v=4" alt="Person" class="card__image">
+    <p class="card__name">Bruno Legentil</p>
     <div class="grid-container">
-
-      <div class="grid-child-posts">
-        156 Post
+    
+     <div class="grid-child">
+        8º período - SI
       </div>
-
-      <div class="grid-child-followers">
-        1012 Likes
-      </div>
-
     </div>
     <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+      
+      <li><a href="https://github.com/bruno076"><i class="fa fa-github"></i></a></li>
     </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
+    <button onclick="window.location.href='https://bruno076.github.io/startbootstrap-landing-page/dist/index.html'" class="btn draw-border">Follow</button>
 
   </div>
-  <!-- partial -->
-
-<!-- partial:index.partial.html -->
-
-<div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
-  <div class="grid-container">
-
-    <div class="grid-child-posts">
-      120 Post
-    </div>
-
-    <div class="grid-child-followers">
-      1600 Likes
-    </div>
-
-  </div>
-  <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-  </ul>
-
-
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
-  <button class="btn draw-border">Message</button>
-
+  
 </div>
-
-
 <!-- partial -->
-</div>
-
   
 </body>
 </html>
