--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
   </div>
   <!-- partial -->
 
-<!-- partial:index.partial.html -->
+<!-- yanmiura -->
 
 <div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
+  <img src="Yan.png">
+  <p class="card__name">Yan Miura</p>
   <div class="grid-container">
 
     <div class="grid-child-posts">
-      120 Post
+      Periodo: 4
     </div>
 
     <div class="grid-child-followers">
-      1600 Likes
+      Aluno
     </div>
 
   </div>
@@ -59,15 +59,16 @@
   </ul>
 
 
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
+  <a href="https://github.com/ymiuraa/startbootstrap-landing-page.git"><button class="btn draw-border">Página</button></a>
   <button class="btn draw-border">Message</button>
 
 </div>
 
 
-<!-- partial -->
+<!-- yanmiura -->
 </div>
 
   
 </body>
 </html>
+
