--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <!-- partial:index.partial.html -->
 <div class="container">
   <div class="card">
-    <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
-    <p class="card__name">Lily-Grace Colley</p>
+    <img src="https://scontent.fcfb2-1.fna.fbcdn.net/v/t1.6435-9/29695232_1681834091906425_8894001491824607232_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=E9dugRBUv64AX9dr8NZ&_nc_ht=scontent.fcfb2-1.fna&oh=ac17c71e74ccb052e5977cd0a9464752&oe=60AE530F" alt="Person" class="card__image">
+    <p class="card__name">Lucas José</p>
     <div class="grid-container">
 
       <div class="grid-child-posts">
-        156 Post
-      </div>
+        150 Commit
+            </div>
 
       <div class="grid-child-followers">
-        1012 Likes
+        1000 Seguidores
       </div>
 
     </div>
@@ -29,44 +29,12 @@
       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
       <li><a href="#"><i class="fa fa-codepen"></i></a></li>
     </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
+    <button class="btn draw-border">Seguir</button>
+    <button class="btn draw-border">Mensagem</button>
 
   </div>
   <!-- partial -->
 
-<!-- partial:index.partial.html -->
-
-<div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
-  <div class="grid-container">
-
-    <div class="grid-child-posts">
-      120 Post
-    </div>
-
-    <div class="grid-child-followers">
-      1600 Likes
-    </div>
-
-  </div>
-  <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-  </ul>
-
-
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
-  <button class="btn draw-border">Message</button>
-
-</div>
-
-
-<!-- partial -->
-</div>
 
   
 </body>
