--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <!-- partial:index.partial.html -->
 <div class="container">
   <div class="card">
-    <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
-    <p class="card__name">Lily-Grace Colley</p>
+    <img src="https://avatars.githubusercontent.com/u/20402021?v=4" alt="Person" class="card__image">
+    <p class="card__name">Yago batista da silva</p>
     <div class="grid-container">
 
       <div class="grid-child-posts">
-        156 Post
+        256 Post
       </div>
 
       <div class="grid-child-followers">
-        1012 Likes
+        2048 Likes
       </div>
 
     </div>
@@ -59,7 +59,7 @@
   </ul>
 
 
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
+  <a href="https://yagobatista.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
   <button class="btn draw-border">Message</button>
 
 </div>
