--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
       <li><a href="#"><i class="fa fa-codepen"></i></a></li>
     </ul>
-    <button class="btn draw-border">Seguir</button>
-    <button class="btn draw-border">Mensagem</button>
+    <a href="https://github.com/LucasJose100"><button class="btn draw-border">Seguir</button></a>
+    
 
   </div>
   <!-- partial -->
