--- a/index.html
+++ b/index.html
@@ -10,64 +10,30 @@
 <!-- partial:index.partial.html -->
 <div class="container">
   <div class="card">
-    <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
-    <p class="card__name">Lily-Grace Colley</p>
+    <img src="https://avatars.githubusercontent.com/u/32078927?v=4" alt="Person" class="card__image">
+    <p class="card__name">Gabriel Fernandes</p>
     <div class="grid-container">
 
       <div class="grid-child-posts">
-        156 Post
+        Unilasalle RJ
       </div>
 
       <div class="grid-child-followers">
-        1012 Likes
+        8º Período - SI
       </div>
 
     </div>
     <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/gabriel-roland-367200158/"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/GABRIELROLAND"><i class="fa fa-github"></i></a></li>
+	  <li><a href="mailto:gabriel.fernandes@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
     </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
+    <button onclick="window.location.href='https://gabrielroland.github.io/startbootstrap-landing-page/';"class="btn draw-border">Follow</button>
 
   </div>
-  <!-- partial -->
-
-<!-- partial:index.partial.html -->
-
-<div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
-  <div class="grid-container">
-
-    <div class="grid-child-posts">
-      120 Post
-    </div>
-
-    <div class="grid-child-followers">
-      1600 Likes
-    </div>
-
-  </div>
-  <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-  </ul>
-
-
-  <a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
-  <button class="btn draw-border">Message</button>
-
+  
 </div>
-
-
 <!-- partial -->
-</div>
-
   
 </body>
 </html>
