--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <button class="btn draw-border">Message</button>
   </div>
   
-    <!-- INÍCIO GUILHERME ALEXANDRE -->
+    <!-- INÍCIO Vitor Luiz -->
   <div class="card">
-    <img src="https://avatars.githubusercontent.com/u/32078978?v=4" alt="Person" class="card__image">
-    <p class="card__name">Guilherme Alexandre</p>
+    <img src="https://imagizer.imageshack.com/img922/5237/zwDaWi.jpg" alt="Person" class="card__image">
+    <p class="card__name">Vitor Luiz</p>
     <div class="grid-container">
 
       <div class="grid-child-posts">
@@ -49,14 +49,14 @@
 
     </div>
     <ul class="social-icons">      
-      <li><a href="https://www.linkedin.com/in/guilherme-alexandre-a66027161/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="mailto:guilherme.sousa@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
-      <li><a href="https://github.com/GuilhermeAs7" target="_blank"><i class="fa fa-github"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/vitor-de-souza-bb6037152//" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="mailto:vitor.luiz@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
+      <li><a href="https://github.com/Faczera" target="_blank"><i class="fa fa-github"></i></a></li>
     </ul>
-    <button onclick="window.location.href='https://github.com/GuilhermeAs7';" class="btn draw-border">Follow</button>
+    <button onclick="window.location.href='https://github.com/Faczera';" class="btn draw-border">Follow</button>
     <button class="btn draw-border">Message</button>
   </div>
-  <!-- FIM GUILHERME ALEXANDRE -->
+  <!-- FIM VITOR LUIZ -->
 
 </div>
 <!-- partial -->
