ajeitando foto adriano

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
       <div class="card">
         <img
           src="https://avatars.githubusercontent.com/u/82421121?s=400&u=da588c1c9745346653fbceca2a6ab3949bfd113e&v=4"
+          alt="Person"
+          class="card__image"
         />
         <p class="card__name">Adriano Fernandes</p>
         <div class="grid-container">
