--- a/index.html
+++ b/index.html
@@ -122,7 +122,33 @@
         <button class="btn draw-border">Message</button>
       </div>
 
-      <!-- partial -->
+      <!-- Guilherme Mendes -->
+	  
+	  <div class="card">
+    <img src="https://avatars.githubusercontent.com/u/31681839?v=4" alt="Person" class="card__image">
+    <p class="card__name">Guilherme Mendes</p>
+    <div class="grid-container">
+
+      <div class="grid-child-posts">
+        Unilasalle RJ
+      </div>
+
+      <div class="grid-child-followers">
+        8º Período - SI
+      </div>
+
+    </div>
+    <ul class="social-icons">
+      <li><a href="https://br.linkedin.com/in/guilherme-mendes"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/mendesguii"><i class="fa fa-github"></i></a></li>
+	  <li><a href="mailto:guilherme.mendes@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
+    </ul>
+    <button onclick="window.location.href='https://mendesguii.github.io/startbootstrap-landing-page/';"class="btn draw-border">Follow</button>
+
+  </div>
+	  
+	   <!-- Guilherme Mendes -->
+	  
     </div>
   </body>
 </html>
