--- a/index.html
+++ b/index.html
@@ -9,38 +9,11 @@
 <body>
 <!-- mypartial:index.partial.html -->
 <div class="container">
-  <div class="card">
-    <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no" alt="Person" class="card__image">
-    <p class="card__name">Lily-Grace Colley</p>
-    <div class="grid-container">
-
-      <div class="grid-child-posts">
-        156 Post
-      </div>
-
-      <div class="grid-child-followers">
-        1012 Likes
-      </div>
-
-    </div>
-    <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-    </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
-
-  </div>
-
-  <!-- partial -->
-
-<!-- partial:index.partial.html -->
+<!-- Inicio Gabriel Carvalho -->
 
 <div class="card">
   <img src="https://avatars.githubusercontent.com/u/82421121?s=400&u=da588c1c9745346653fbceca2a6ab3949bfd113e&v=4">
-  <p class="card__name">Adriano Fernandes</p>
+  <p class="card__name">Gabriel Carvalho</p>
   <div class="grid-container">
 
     <div class="grid-child-posts">
@@ -64,8 +37,7 @@
   <button class="btn draw-border">Message</button>
 
 </div>
-
-
+<!-- Fim Gabriel Carvalho -->
 <!-- partial -->
 </div>
 
