--- a/index.html
+++ b/index.html
@@ -230,6 +230,32 @@
         >
       </div>
       <!-- FIM Gabriel Carvalho -->
+
+    <!-- INÍCIO GUILHERME ALEXANDRE -->
+    <div class="card">
+      <img src="https://avatars.githubusercontent.com/u/32078978?v=4" alt="Person" class="card__image">
+      <p class="card__name">Guilherme Alexandre</p>
+      <div class="grid-container">
+
+        <div class="grid-child-posts">
+          Unilasalle-RJ
+        </div>
+
+        <div class="grid-child-followers">
+          8º período - SI
+        </div>
+
+      </div>
+      <ul class="social-icons">      
+        <li><a href="https://www.linkedin.com/in/guilherme-alexandre-a66027161/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="mailto:guilherme.sousa@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="https://github.com/GuilhermeAs7" target="_blank"><i class="fa fa-github"></i></a></li>
+      </ul>
+      <button onclick="window.location.href='https://github.com/GuilhermeAs7';" class="btn draw-border">Follow</button>
+      <button class="btn draw-border">Message</button>
+    </div>
+    <!-- FIM GUILHERME ALEXANDRE -->
+    
   </body>
 
 </html>
