remove second card

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div class="container">
+  <div class="container">
+  <!-- Inicio yago batista -->
+  <!-- partial:index.partial.html -->
   <div class="card">
     <img src="https://avatars.githubusercontent.com/u/20402021?v=4" alt="Person" class="card__image">
     <p class="card__name">Yago batista da silva</p>
@@ -34,33 +35,7 @@
 
   </div>
   <!-- partial -->
-
-<!-- partial:index.partial.html -->
-
-<div class="card">
-  <img src="Adriano.png">
-  <p class="card__name">Adriano Fernandes</p>
-  <div class="grid-container">
-
-    <div class="grid-child-posts">
-      120 Post
-    </div>
-
-    <div class="grid-child-followers">
-      1600 Likes
-    </div>
-
-  </div>
-  <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-  </ul>
-
-
-  <a href="https://yagobatista.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
-  <button class="btn draw-border">Message</button>
+  <!-- Fim yago batista -->
 
 </div>
 
