--- a/index.html
+++ b/index.html
@@ -314,6 +314,35 @@
 <!-- fim joao gabriel alegria -->
   
 <!-- partial -->
+
+  <!-- Inicio yago batista -->
+  <!-- partial:index.partial.html -->
+  <div class="card">
+    <img src="https://avatars.githubusercontent.com/u/20402021?v=4" alt="Person" class="card__image">
+    <p class="card__name">Yago batista da silva</p>
+    <div class="grid-container">
+
+      <div class="grid-child-posts">
+        256 Post
+      </div>
+
+      <div class="grid-child-followers">
+        2048 Likes
+      </div>
+
+    </div>
+    <ul class="social-icons">
+      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    </ul>
+    <button class="btn draw-border">Follow</button>
+    <button class="btn draw-border">Message</button>
+
+  </div>
+  <!-- partial -->
+  <!-- Fim yago batista -->
   </body>
 
 </html>
