--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <p class="card__name">Gabriel Rocha</p>
   <div class="grid-container">
     <div class="grid-child-posts">
-      1 Post
+      8º Período
     </div>
     <div class="grid-child-followers">
-      1 Likes
+      SI Lasalle
     </div>
   </div>
   <ul class="social-icons">
@@ -51,7 +51,6 @@
     <li><a href="#"><i class="fa fa-codepen"></i></a></li>
   </ul>
   <a href="https://qpgabriel.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Página</button></a>
-  <button class="btn draw-border">Message</button>
 </div>
 <!-- partial -->
 
