--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- yanmiura -->
 
 <div class="card">
-  <img src="Yan.png">
+  <img src="https://avatars.githubusercontent.com/u/82350314?s=400&u=eb7668b50d48b3f008ece93dcd8f8c70f33635d6&v=4">
   <p class="card__name">Yan Miura</p>
   <div class="grid-container">
 
@@ -52,7 +52,7 @@
 
   </div>
   <ul class="social-icons">
-    <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="https://www.instagram.com/yanmiura/"><i class="fa fa-instagram"></i></a></li>
     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
     <li><a href="#"><i class="fa fa-codepen"></i></a></li>
@@ -71,4 +71,3 @@
   
 </body>
 </html>
-
