--- a/index.html
+++ b/index.html
@@ -343,6 +343,45 @@
   </div>
   <!-- partial -->
   <!-- Fim yago batista -->
+  
+  <!-- Inicio Paulo Marinho -->
+  <div class="card">
+    <img
+      src="https://avatars.githubusercontent.com/u/54866573?s=400&u=f32aedf06f33cde42cf0299424706ea4ea65abea&v=4"
+      alt="Person"
+      class="card__image"
+    />
+    <p class="card__name">Paulo Sérgio Marinho</p>
+    <div class="grid-container">
+      <div class="grid-child-posts">Unilasalle-RJ</div>
+
+      <div class="grid-child-followers">5º Periodo</div>
+    </div>
+    <ul class="social-icons">
+      <li>
+        <a href="https://www.instagram.com/paulinho_01p/"
+          ><i class="fa fa-instagram"></i
+        ></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-codepen"></i></a>
+      </li>
+    </ul>
+
+    <a
+      href="https://paulinho010.github.io/startbootstrap-landing-page/dist/index.html"
+      ><button class="btn draw-border">Página</button></a
+    >
+    <button class="btn draw-border">Message</button>
+  </div>
+  <!-- Fim Paulo Marinho -->
+
   </body>
 
 </html>
