--- a/index.html
+++ b/index.html
@@ -353,23 +353,30 @@
   </div>
   <!-- partial -->
   <!-- Fim yago batista -->
-  
 
-<<<<<<< HEAD
-<!-- yanmiura -->
-
+<!-- INICIO YANMIURA --> 
 <div class="card">
   <img src="https://avatars.githubusercontent.com/u/82350314?s=400&u=eb7668b50d48b3f008ece93dcd8f8c70f33635d6&v=4">
   <p class="card__name">Yan Miura</p>
   <div class="grid-container">
-
     <div class="grid-child-posts">
       Periodo: 4
     </div>
-
     <div class="grid-child-followers">
       Aluno
-=======
+    </div>
+    </div>
+    <ul class="social-icons">
+      <li><a href="https://www.instagram.com/yanmiura/"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    </ul>
+    <button class="btn draw-border">Follow</button>
+    <button class="btn draw-border">Message</button>
+  </div>
+  <!-- FIM YANMIURA -->
+
   <!-- Inicio Paulo Marinho -->
   <div class="card">
     <img
@@ -382,13 +389,11 @@
       <div class="grid-child-posts">Unilasalle-RJ</div>
 
       <div class="grid-child-followers">5º Periodo</div>
->>>>>>> f9d31c32bb0ae938eca5afc7ee8fbaa9557f8224
     </div>
     <ul class="social-icons">
       <li>
         <a href="https://www.instagram.com/paulinho_01p/"
-          ><i class="fa fa-instagram"></i
-        ></a>
+          ><i class="fa fa-instagram"></i        ></a>
       </li>
       <li>
         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -401,39 +406,26 @@
       </li>
     </ul>
 
-    <a
-      href="https://paulinho010.github.io/startbootstrap-landing-page/dist/index.html"
-      ><button class="btn draw-border">Página</button></a
-    >
+    <a href="https://paulinho010.github.io/startbootstrap-landing-page/dist/index.html">
+    <button class="btn draw-border">Página</button></a>
     <button class="btn draw-border">Message</button>
   </div>
-<<<<<<< HEAD
   <ul class="social-icons">
     <li><a href="https://www.instagram.com/yanmiura/"><i class="fa fa-instagram"></i></a></li>
     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
     <li><a href="#"><i class="fa fa-codepen"></i></a></li>
   </ul>
-=======
   <!-- Fim Paulo Marinho -->
   
     <!-- INÍCIO Rafael Feres -->
->>>>>>> f9d31c32bb0ae938eca5afc7ee8fbaa9557f8224
-
 	<div class="card">
 	  <img src="https://avatars.githubusercontent.com/u/28442556?s=400&u=ff4225ddae174ef6d2e0786d97ab56e7d639b51b&v=4" alt="Person" class="card__image">
 	  <p class="card__name">Rafael Marins Feres</p>
 	  <div class="grid-container"></div>
-
-<<<<<<< HEAD
-  <a href="https://github.com/ymiuraa/startbootstrap-landing-page.git"><button class="btn draw-border">Página</button></a>
-  <button class="btn draw-border">Message</button>
-=======
 		<div class="grid-child-posts">
 		  Semester: 8th
 		</div>
->>>>>>> f9d31c32bb0ae938eca5afc7ee8fbaa9557f8224
-
 		<div class="grid-child-followers">
 		  Student/Researcher 
 		  
@@ -452,14 +444,10 @@
   <!-- FIM Rafael Feres -->
 
   </body>
-
-<<<<<<< HEAD
-<!-- yanmiura -->
 </div>
 
   
 </body>
 </html>
-=======
 </html>
->>>>>>> f9d31c32bb0ae938eca5afc7ee8fbaa9557f8224
+
