--- a/index.html
+++ b/index.html
@@ -355,26 +355,43 @@
   <!-- Fim yago batista -->
 
 <!-- INICIO YANMIURA --> 
-<div class="card">
-  <img src="https://avatars.githubusercontent.com/u/82350314?s=400&u=eb7668b50d48b3f008ece93dcd8f8c70f33635d6&v=4">
-  <p class="card__name">Yan Miura</p>
-  <div class="grid-container">
-    <div class="grid-child-posts">
-      Periodo: 4
-    </div>
-    <div class="grid-child-followers">
-      Aluno
-    </div>
-    </div>
-    <ul class="social-icons">
-      <li><a href="https://www.instagram.com/yanmiura/"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-    </ul>
-    <button class="btn draw-border">Follow</button>
-    <button class="btn draw-border">Message</button>
-  </div>
+ <div class="card">
+        <img
+          src="https://avatars.githubusercontent.com/u/82350314?v=4"
+          alt="Person"
+          class="card__image"
+        />
+        <p class="card__name">Yan Miura</p>
+        <div class="grid-container">
+          <div class="grid-child-posts">Período: 4º</div>
+
+          <div class="grid-child-followers">Aluno</div>
+        </div>
+        <ul class="social-icons">
+          <li>
+            <a href="https://github.com/ymiuraa">
+             <i class="fa fa-github"></i>
+            </a>
+          </li>
+          <li>
+        <a href="https://www.instagram.com/yanmiura/">
+          <i class="fa fa-instagram"></i        ></a>
+          </li>
+          </a>
+          </li>
+        </ul>
+        <a
+          href="https://github.com/ymiuraa/lasalle.cscw.2021.1.pub.git"
+          class="btn draw-border"
+          style="text-align: center; text-decoration: none; max-width: 130px"
+          >Follow</a>
+        <a
+          href="https://github.com/ymiuraa/lasalle.cscw.2021.1.pub.git"
+          class="btn draw-border"
+          style="text-align: center; text-decoration: none; max-width: 130px"
+          >Message</a
+        >
+      </div>
   <!-- FIM YANMIURA -->
 
   <!-- Inicio Paulo Marinho -->
