--- a/index.html
+++ b/index.html
@@ -460,6 +460,31 @@
 	</div>
   <!-- FIM Rafael Feres -->
 
+  <!-- INÍCIO Gabriel Rocha -->
+	<div class="card">
+	  <img src="https://avatars.githubusercontent.com/u/26581648?v=4" alt="Person" class="card__image">
+	  <p class="card__name">Gabriel Rocha</p>
+	  <div class="grid-container"></div>
+		<div class="grid-child-posts">
+		  8º Periodo
+		</div>
+		<div class="grid-child-followers">
+		  SI Lasalle-RJ
+		  
+		</div>
+	
+	  <ul class="social-icons">
+		<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+		<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+		<li><a href="https://www.linkedin.com/in/gabriel-rocha-a575a458/"><i class="fa fa-linkedin"></i></a></li>
+		<li><a href="https://github.com/qpgabriel"><i class="fa fa-github"></i></a></li>
+	  </ul>
+	  <button class="btn draw-border">Follow</button>
+	  <button class="btn draw-border" href="https://qpgabriel.github.io/startbootstrap-landing-page/dist/index.html">Message</button>
+	  
+	</div>
+  <!-- FIM Gabriel Rocha -->
+
   </body>
 </div>
 
