--- a/index.html
+++ b/index.html
@@ -427,12 +427,6 @@
     <button class="btn draw-border">Página</button></a>
     <button class="btn draw-border">Message</button>
   </div>
-  <ul class="social-icons">
-    <li><a href="https://www.instagram.com/yanmiura/"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-  </ul>
   <!-- Fim Paulo Marinho -->
   
     <!-- INÍCIO Rafael Feres -->
@@ -480,7 +474,7 @@
 		<li><a href="https://github.com/qpgabriel"><i class="fa fa-github"></i></a></li>
 	  </ul>
 	  <button class="btn draw-border">Follow</button>
-	  <button class="btn draw-border" href="https://qpgabriel.github.io/startbootstrap-landing-page/dist/index.html">Message</button>
+	  <button class="btn draw-border" onclick="window.location.href='https://qpgabriel.github.io/startbootstrap-landing-page/dist/index.html";>Message</button>
 	  
 	</div>
   <!-- FIM Gabriel Rocha -->
