--- a/index.html
+++ b/index.html
@@ -460,6 +460,53 @@
 	</div>
   <!-- FIM Rafael Feres -->
 
+  <!-- INICIO ENDRIGO -->
+  
+  <div class="card">
+    <img
+      src="https://avatars.githubusercontent.com/u/54483167?"
+      alt="Person"
+      class="card__image"
+    />
+    <p class="card__name">Endrigo Valente</p>
+    <div class="grid-container">
+      <div class="grid-child-posts">Período: 4º</div>
+
+      <div class="grid-child-followers">Aluno</div>
+    </div>
+
+    <ul class="social-icons">
+      <li>
+        <a href="https://github.com/evalente82"
+          ><i class="fa fa-github"></i
+        ></a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/endrigo-valente-3357a635/"
+          ><i class="fa fa-linkedin"></i
+        ></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/endrigo.valente/"><i class="fa fa-instagram"></i></a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/endrigo.valente/"><i class="fa fa-facebook"></i></a>
+      </li>
+    </ul>
+    <a
+      href="https://evalente82.github.io/startbootstrap-landing-page/dist/index.html"
+      class="btn draw-border"
+      style="text-align: center; text-decoration: none; max-width: 130px"
+      >Follow</a
+    >
+    <a
+      href="#"
+      class="btn draw-border"
+      style="text-align: center; text-decoration: none; max-width: 130px"
+      >Message</a>
+  </div>
+    <!-- FIM ENDRIGO -->
+
   </body>
 </div>
 
