--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         />
         <p class="card__name">Adriano Fernandes</p>
         <div class="grid-container">
-          <div class="grid-child-posts">Unilasalle-RJ</div>
+          <div class="grid-child-posts">120 Post</div>
 
-      <div class="grid-child-followers">5º Periodo</div>
+          <div class="grid-child-followers">1600 Likes</div>
         </div>
         <ul class="social-icons">
           <li>
@@ -427,6 +427,12 @@
     <button class="btn draw-border">Página</button></a>
     <button class="btn draw-border">Message</button>
   </div>
+  <ul class="social-icons">
+    <li><a href="https://www.instagram.com/yanmiura/"><i class="fa fa-instagram"></i></a></li>
+    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+  </ul>
   <!-- Fim Paulo Marinho -->
   
     <!-- INÍCIO Rafael Feres -->
@@ -454,30 +460,56 @@
 	</div>
   <!-- FIM Rafael Feres -->
 
-  <!-- INÍCIO Gabriel Rocha -->
-	<div class="card">
-	  <img src="https://avatars.githubusercontent.com/u/26581648?v=4" alt="Person" class="card__image">
-	  <p class="card__name">Gabriel Rocha</p>
-	  <div class="grid-container"></div>
-		<div class="grid-child-posts">
-		  8º Periodo
-		</div>
-		<div class="grid-child-followers">
-		  SI Lasalle-RJ
-		  
-		</div>
-	
-	  <ul class="social-icons">
-		<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-		<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-		<li><a href="https://www.linkedin.com/in/gabriel-rocha-a575a458/"><i class="fa fa-linkedin"></i></a></li>
-		<li><a href="https://github.com/qpgabriel"><i class="fa fa-github"></i></a></li>
-	  </ul>
-	  <button class="btn draw-border">Follow</button>
-	  <button class="btn draw-border" onclick="window.location.href='https://qpgabriel.github.io/startbootstrap-landing-page/dist/index.html";>Message</button>
-	  
-	</div>
-  <!-- FIM Gabriel Rocha -->
+  <!-- INICIO Daniel Costa -->
+
+  <div class="card">
+      <img
+        src="https://avatars.githubusercontent.com/u/82982367?s=400&u=cedc7bae2eb3440328fd9ab67024a5cefa0ff287&v=4"
+        alt="Person"
+        class="card__image"
+      />
+      <p class="card__name">Daniel Costa</p>
+      <div class="grid-container">
+        <div class="grid-child-posts">Período: 4º</div>
+
+        <div class="grid-child-followers">Aluno</div>
+      </div>
+
+      <ul class="social-icons">
+        <li>
+          <a href="https://github.com/DanielCosta-ptbr"
+            ><i class="fa fa-github"></i
+          ></a>
+        </li>
+        <!-- <li>
+          <a href="https://www.linkedin.com/in/endrigo-valente-3357a635/"
+            ><i class="fa fa-linkedin"></i
+          ></a>
+        </li> -->
+        <!-- <li>
+          <a href="https://www.instagram.com/endrigo.valente/"><i class="fa fa-instagram"></i></a>
+        </li> -->
+        <li>
+          <a href="https://www.facebook.com/daniel.costa.79656/"><i class="fa fa-facebook"></i></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/daniel.costa.79656/"><i class="fa fa-facebook"></i></a>
+        </li>
+      </ul>
+      <a
+        href="https://evalente82.github.io/startbootstrap-landing-page/dist/index.html"
+        class="btn draw-border"
+        style="text-align: center; text-decoration: none; max-width: 130px"
+        >Follow</a
+      >
+      <a
+        href="#"
+        class="btn draw-border"
+        style="text-align: center; text-decoration: none; max-width: 130px"
+        >Message</a>
+    </div>
+
+    <!-- FIM Daniel Costa -->
 
   </body>
 </div>
