Alterando o link para o start bootstrap novo template

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </li>
       </ul>
       <a
-        href="https://evalente82.github.io/startbootstrap-landing-page/dist/index.html"
+        href="https://DanielCosta-ptbr.github.io/startbootstrap-landing-page/dist/index.html"
         class="btn draw-border"
         style="text-align: center; text-decoration: none; max-width: 130px"
         >Follow</a
