--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         />
         <p class="card__name">Adriano Fernandes</p>
         <div class="grid-container">
-          <div class="grid-child-posts">120 Post</div>
+          <div class="grid-child-posts">Unilasalle-RJ</div>
 
-          <div class="grid-child-followers">1600 Likes</div>
+          <div class="grid-child-followers">5º Periodo</div>
         </div>
         <ul class="social-icons">
           <li>
