--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <li><a href="https://github.com/bruno076"><i class="fa fa-github"></i></a></li>
     </ul>
     <button onclick="window.location.href='https://bruno076.github.io/startbootstrap-landing-page/dist/index.html'" class="btn draw-border">Follow</button>
-
+    <button class="btn draw-border">
+    ::before
+     "Message"
+    ::after	
   </div>
   
 </div>
