--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="./style.css"/>
 	</head>
 	<body>
+		<div class="divheader"><h1>Página do meu Grupo01</h1></div>
+		<div class="container">
 		<!-- INÍCIO Gustavo Duarte -->
 		<div class="container">
 			<div class="card">
@@ -562,6 +564,8 @@
 																					</div>
 																					<!-- FIM Gabriel Rocha -->
 																				</body>
+																			</div>
+																			</div>
 																			</div>
 																		</body>
 																	</html>
