--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-	<div class="divheader"><h1>Página da Tuurma</h1></div>
+	<h1 class="display-5 fw-bold">Página da Turma</h1>
     <div class="container">
 		<!-- inicio joao gabriel alegria-->
 		<div class="card">
@@ -70,6 +70,25 @@
 		<a href="https://gustavoduartem.github.io/lasalle.cscw.2021.1.grupo05/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Gustavo Duarte -->
+	    	<!-- INÍCIO LEONARDO MARTELOTTE -->
+		<div class="card">
+		<img src="https://avatars.githubusercontent.com/u/32073964?v=4" alt="Person" class="card__image">
+		<p class="card__name">Leonardo Martelotte</p>
+		<div class="grid-container"></div>
+		  <div class="grid-child-posts">
+			8º Periodo
+		  </div>
+		  <div class="grid-child-followers">
+			SI Lasalle-RJ
+		  </div>
+		<ul class="social-icons">
+		  <li><a href="https://br.linkedin.com/in/leonardo-martelotte"><i class="fa fa-linkedin"></i></a></li>
+		  <li><a href="https://github.com/leonardomartelotte"><i class="fa fa-github"></i></a></li>
+		</ul>
+		<a href="https://leonardomartelotte.github.io/martelotte-com/"><button class="btn draw-border">Minha Página</button></a>
+		<a href="https://leonardomartelotte.github.io/martelotte-com/contact.html"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM LEONARDO MARTELOTTE -->
 	</div>
 </body>
 </html>
