Ajeitando bugs fechamento de div

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 		<div class="card">
 		<img src="https://avatars.githubusercontent.com/u/26581648?v=4" alt="Person" class="card__image">
 		<p class="card__name">Gabriel Rocha</p>
-		<div class="grid-container"></div>
+		<div class="grid-container">
 		  <div class="grid-child-posts">
 			8º Periodo
 		  </div>
 		  <div class="grid-child-followers">
 			SI Lasalle-RJ
 		  </div>
+		</div>
 		<ul class="social-icons">
 		  <li><a href="https://www.linkedin.com/in/gabriel-rocha-a575a458/"><i class="fa fa-linkedin"></i></a></li>
 		  <li><a href="https://github.com/qpgabriel"><i class="fa fa-github"></i></a></li>
@@ -53,13 +54,14 @@
 		<div class="card">
 		<img src="https://avatars.githubusercontent.com/u/79589308?v=4" alt="Person" class="card__image">
 		<p class="card__name">Gustavo Duarte</p>
-		<div class="grid-container"></div>
+		<div class="grid-container">
 		  <div class="grid-child-posts">
 			?º Periodo
 		  </div>
 		  <div class="grid-child-followers">
 			SI Lasalle-RJ
 		  </div>
+		</div>
 		<ul class="social-icons">
 		  <li><a href="https://www.instagram.com/gustavogdm/"><i class="fa fa-instagram"></i></a></li>
 		  <li><a href="https://twitter.com/gustDuz"><i class="fa fa-twitter"></i></a></li>
@@ -70,17 +72,18 @@
 		<a href="https://gustavoduartem.github.io/lasalle.cscw.2021.1.grupo05/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Gustavo Duarte -->
-	    	<!-- INÍCIO LEONARDO MARTELOTTE -->
+		<!-- INÍCIO LEONARDO MARTELOTTE -->
 		<div class="card">
 		<img src="https://avatars.githubusercontent.com/u/32073964?v=4" alt="Person" class="card__image">
 		<p class="card__name">Leonardo Martelotte</p>
-		<div class="grid-container"></div>
+		<div class="grid-container">
 		  <div class="grid-child-posts">
 			8º Periodo
 		  </div>
 		  <div class="grid-child-followers">
 			SI Lasalle-RJ
 		  </div>
+		</div>
 		<ul class="social-icons">
 		  <li><a href="https://br.linkedin.com/in/leonardo-martelotte"><i class="fa fa-linkedin"></i></a></li>
 		  <li><a href="https://github.com/leonardomartelotte"><i class="fa fa-github"></i></a></li>
