--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-	<h1 class="display-5 fw-bold">Página da Turma</h1>
+	<div class="px-4 py-5 my-5 text-center">
+    	<img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+    	<h1 class="display-5 fw-bold">Página da Turma</h1>
+	</div>
     <div class="container">
 		<!-- inicio joao gabriel alegria-->
 		<div class="card">
