add Guilherme Mendes

--- a/index.html
+++ b/index.html
@@ -112,6 +112,26 @@
 		<a href=""><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Adriano Fernandes -->
+	    			<!-- INÍCIO Guilherme Mendes -->
+		<div class="card">
+		<img src="https://avatars.githubusercontent.com/u/31681839?v=4" alt="Person" class="card__image">
+		<p class="card__name">Guilherme Mendes</p>
+		<div class="grid-container">
+		  <div class="grid-child-posts">
+			?º Periodo
+		  </div>
+		  <div class="grid-child-followers">
+			SI Lasalle-RJ
+		  </div>
+		</div>
+		<ul class="social-icons">
+		  <li><a href="https://br.linkedin.com/in/guilherme-mendes"><i class="fa fa-linkedin"></i></a></li>
+		  <li><a href="https://github.com/mendesguii"><i class="fa fa-github"></i></a></li>
+		</ul>
+		<a href="https://mendesguii.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Minha Página</button></a>
+		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Guilherme Mendes -->
 	</div>
 </body>
 </html>
