add Gabriel Carvalho

--- a/index.html
+++ b/index.html
@@ -150,7 +150,26 @@
 		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Endrigo Valente -->
-	    	
+	    			<!-- INÍCIO Gabriel Carvalho -->
+		<div class="card">
+		<img src="https://avatars.githubusercontent.com/u/63477900?v=4" alt="Person" class="card__image">
+		<p class="card__name">Gabriel Carvalho</p>
+		<div class="grid-container">
+		  <div class="grid-child-posts">
+			8º Periodo
+		  </div>
+		  <div class="grid-child-followers">
+			SI Lasalle-RJ
+		  </div>
+		</div>
+		<ul class="social-icons">
+		  <li><a href="https://www.linkedin.com/in/gabriel-da-silva-carvalho-1420b41a7/"><i class="fa fa-linkedin"></i></a></li>
+		  <li><a href="https://github.com/GabrielCarvalho06"><i class="fa fa-github"></i></a></li>
+		</ul>
+		<a href="https://gabrielcarvalho06.github.io/CSCW/"><button class="btn draw-border">Minha Página</button></a>
+		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Gabriel Carvalho -->	    	
 	</div>
 </body>
 </html>
