add Rafael Feres

--- a/index.html
+++ b/index.html
@@ -292,6 +292,26 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Paulo Sérgio -->
+	    	<!-- INÍCIO Rafael Feres -->
+		<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/28442556?s=400&u=ff4225ddae174ef6d2e0786d97ab56e7d639b51b&v=4" alt="Person" class="card__image">
+		    <p class="card__name">Rafael Feres</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			8º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.linkedin.com/in/feresrafael/"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="https://github.com/feresrafael"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="#"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Rafael Feres -->
 	</div>
 </body>
 </html>
