add Renan Tostes

--- a/index.html
+++ b/index.html
@@ -334,6 +334,27 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Daniel Costa -->
+	    	<!-- INÍCIO Renan Tostes -->
+		<div class="card">
+		    <img src="img/renan.png" alt="Person" class="card__image">
+		    <p class="card__name">Renan Tostes</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			?º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.instagram.com/renanlt/"><i class="fa fa-instagram"></i></a></li>
+		      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="#"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://renanltostes.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Renan Tostes -->
 	</div>
 </body>
 </html>
