Update Card Rafael

--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
 		      <li><a href="https://www.linkedin.com/in/feresrafael/"><i class="fa fa-linkedin"></i></a></li>
 		      <li><a href="https://github.com/feresrafael"><i class="fa fa-github"></i></a></li>
 		    </ul>
-		    <a href="#"><button class="btn draw-border">Minha Página</button></a>
-		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		    <a href="https://feresrafael.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="https://qpgabriel.github.io/lasalle.cscw.2021.1.grupo01/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Rafael Feres -->
 		<!-- INÍCIO Daniel Costa -->
