Link Meu Grupo Joao Gabriel Alegria

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li><a href="https://github.com/Voidgodhand"><i class="fa fa-github"></i></a></li>
 		</ul>
 		<a href="https://voidgodhand.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-		<a href="https://salgado.github.io/lasalle.cscw.2021.1.pub/"><button class="btn draw-border">Meu Grupo</button></a>
+		<a href="https://qpgabriel.github.io/lasalle.cscw.2021.1.grupo01/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- fim joao gabriel alegria -->
 		<!-- INÍCIO Gabriel Rocha -->
