Grupo 02 - Link Adicionado

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		  <li><a href="https://github.com/leonardomartelotte"><i class="fa fa-github"></i></a></li>
 		</ul>
 		<a href="https://leonardomartelotte.github.io/martelotte-com/"><button class="btn draw-border">Minha Página</button></a>
-		<a href="https://leonardomartelotte.github.io/martelotte-com/contact.html"><button class="btn draw-border">Meu Grupo</button></a>
+		<a href="https://guilhermeas7.github.io/lasalle.cscw.2021.1.grupo02/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM LEONARDO MARTELOTTE -->
 	    	<!-- INÍCIO Adriano Fernandes -->
@@ -126,7 +126,7 @@
 		  <li><a href="https://github.com/mendesguii"><i class="fa fa-github"></i></a></li>
 		</ul>
 		<a href="https://mendesguii.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Minha Página</button></a>
-		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		<a href="https://guilhermeas7.github.io/lasalle.cscw.2021.1.grupo02/"><button class="btn draw-border">Meu Grupo</button></a>	
 		</div>
 		<!-- FIM Guilherme Mendes -->
 	    	<!-- INÍCIO Endrigo Valente -->
@@ -186,8 +186,8 @@
 		      <li><a href="https://www.linkedin.com/in/guilherme-alexandre-a66027161/"><i class="fa fa-linkedin"></i></a></li>
 		      <li><a href="https://github.com/GuilhermeAs7"><i class="fa fa-github"></i></a></li>
 		    </ul>
-		    <a href="#"><button class="btn draw-border">Minha Página</button></a>
-		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		    <a href="https://guilhermeas7.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="https://guilhermeas7.github.io/lasalle.cscw.2021.1.grupo02/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Guilherme Alexandre -->
 		<!-- INÍCIO Gabriel Fernandes -->
@@ -207,7 +207,7 @@
 		      <li><a href="https://github.com/GABRIELROLAND"><i class="fa fa-github"></i></a></li>
 		    </ul>
 		    <a href="https://gabrielroland.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Minha Página</button></a>
-		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		    <a href="https://guilhermeas7.github.io/lasalle.cscw.2021.1.grupo02/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Gabriel Fernandes -->
 		<!-- INÍCIO Bruno Legentil -->
