alterando periodo guilherme mendes

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		<p class="card__name">Guilherme Mendes</p>
 		<div class="grid-container">
 		  <div class="grid-child-posts">
-			?º Periodo
+			8º Periodo
 		  </div>
 		  <div class="grid-child-followers">
 			SI Lasalle-RJ
