--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		  <li><a href="https://github.com/GabrielCarvalho06"><i class="fa fa-github"></i></a></li>
 		</ul>
 		<a href="https://gabrielcarvalho06.github.io/CSCW/"><button class="btn draw-border">Minha Página</button></a>
-		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		<a href="https://gustavoduartem.github.io/lasalle.cscw.2021.1.grupo05/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Gabriel Carvalho -->	
 		<!-- INÍCIO Guilherme Alexandre -->
@@ -373,7 +373,7 @@
 		      <li><a href="https://github.com/fernandoquinellato"><i class="fa fa-github"></i></a></li>
 		    </ul>
 		    <a href="https://fernandoquinellato.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		    <a href="https://gustavoduartem.github.io/lasalle.cscw.2021.1.grupo05/"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Luiz Fernando -->
 		<!-- INÍCIO Cedric Fagundes -->
