Atualizando Card João Victor Gomes Soriano

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 					Página</button></a>
             <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
-        <!-- FIM Lucas José -->
+        <!-- FIM João Soriano -->
     </div>
 </body>
 
