atualizando cards Pedro Henrique

--- a/index.html
+++ b/index.html
@@ -442,6 +442,28 @@
             <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM João Soriano -->
+        <!-- INÍCIO Pedro Henrique -->
+        <div class="card">
+            <img src="img/pedroh117.jpg" alt="Person" class="card__image">
+            <p class="card__name">Pedro Henrique</p>
+            <div class="grid-container">
+                <div class="grid-child-posts">
+                    6º Periodo SI
+                </div>
+                <div class="grid-child-followers">
+                    UNILASALLE-RJ
+                </div>
+            </div>
+            <ul class="social-icons">
+                <li><a href="https://www.instagram.com/pdrhnrq_96/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/pedro-henrique-4204b5170/"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/pedroh117"><i class="fa fa-github"></i></a></li>
+            </ul>
+            <a href="https://pedroh117github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha
+					Página</button></a>
+            <a href="https://github.com/qpgabriel/lasalle.cscw.2021.1.grupo01"><button class="btn draw-border">Meu Grupo</button></a>
+        </div>
+        <!-- FIM Pedro Henrique -->
     </div>
 </body>
 
