modificando os links do card PH

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             </ul>
             <a href="https://pedroh117github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha
 					Página</button></a>
-            <a href="https://github.com/qpgabriel/lasalle.cscw.2021.1.grupo01"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://qpgabriel.github.io/lasalle.cscw.2021.1.grupo01/"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Pedro Henrique -->
     </div>
