--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <li><a href="#"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://renanltostes.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://renanltostes.github.io/grupo04/index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Renan Tostes -->
         <!-- INÍCIO Luiz Fernando -->
