--- a/index.html
+++ b/index.html
@@ -486,6 +486,27 @@
             <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM João Gabriel Carvalho -->
+		<div class="card">
+    <img src="https://avatars.githubusercontent.com/u/32078999?s=400&u=ed8ad2738cc53b73a52ecb589017a00373f97bdc&v=4" alt="Person" class="card__image">
+    <p class="card__name">Vitor Luiz</p>
+    <div class="grid-container">
+
+     <div class="grid-child-posts">
+        8º período - SI
+      </div>
+    
+     <div class="grid-child">
+	SI Lasalle-RJ
+      </div>
+
+    </div>
+    <ul class="social-icons">
+      <li><a href="https://github.com/Faczera"><i class="fa fa-github"></i></a></li>
+      <li><a href="mailto:vitor.luiz@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
+    </ul>
+    <button onclick="window.location.href='https://faczera.github.io/startbootstrap-landing-page/'" class="btn draw-border">Minha Pagina</button>
+    <button onclick="window.location.href='https://salgado.github.io/lasalle.cscw.2021.1.pub/';" class="btn draw-border">Página da Turma</button>	
+  </div>
     </div>
 </body>
 
