--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
       <li><a href="mailto:vitor.luiz@soulasalle.com.br"><i class="fa fa-envelope"></i></a></li>
     </ul>
     <button onclick="window.location.href='https://faczera.github.io/startbootstrap-landing-page/'" class="btn draw-border">Minha Pagina</button>
-    <button onclick="window.location.href='https://salgado.github.io/lasalle.cscw.2021.1.pub/';" class="btn draw-border">Página da Turma</button>	
+    <button onclick="window.location.href='https://bruno076.github.io/lasalle.cscw.2021.1.grupo03/';" class="btn draw-border">Meu Grupo</button>	
   </div>
     </div>
 </body>
