atualização informação meu card

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <li><a href="#"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://lucasjose100.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Minha Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://bruno076.github.io/lasalle.cscw.2021.1.grupo03/"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Lucas José -->
         <!-- INÍCIO João Soriano -->
